--- a/main.html
+++ b/main.html
@@ -8,6 +8,16 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">Iphone</li>
+		<li data-ns-test="shoppingList">MacBook</li>
+		<li data-ns-test="shoppingList">Ring</li>
+	</ol>
+	<ol>
+		<li data-ns-test="holidayList">Dubai</li>
+		<li data-ns-test="holidayList">HongKong</li>
+		<li data-ns-test="holidayList">paris</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
