--- a/main.html
+++ b/main.html
@@ -9,15 +9,18 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-test="shoppingList">Iphone</li>
-		<li data-ns-test="shoppingList">MacBook</li>
-		<li data-ns-test="shoppingList">Ring</li>
+		<li data-ns-test="shoppingList">iphone</li>
+		<li data-ns-test="shoppingList">mac</li>
+		<li data-ns-test="shoppingList">gf</li>
+		
 	</ol>
-	<ol>
-		<li data-ns-test="holidayList">Dubai</li>
-		<li data-ns-test="holidayList">HongKong</li>
-		<li data-ns-test="holidayList">paris</li>
-	</ol>
+
+	<ul >
+		<li data-ns-test="holidayList">dubai</li>
+		<li data-ns-test="holidayList">hongkong</li>
+		<li data-ns-test="holidayList">america</li>
+		
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
